--- a/style.css
+++ b/style.css
@@ -6,27 +6,29 @@
   font-style: normal;
 }
 
-
-
-.fixed-bg {
-  background-image: url("GT poster.jpg");
-  background-repeat:no-repeat;
-  min-height: 100vh;
-  background-size: cover;
-  background-position: 50% 75%;
-  background-attachment: fixed;
-  background-color: #cccccc;
-  alt="Ghosts' Town cover art. Stu Parker,
-Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake"
-}
 .box {
-  border: 1px solid purple;
+  border: 0px solid purple;
   padding: 10px;
   width: 75%;
   height: 25%;
   text-align: center;
   width: 75%;
   margin: 0 auto;
+  color: #3c3c3c;
+  background: #ECCEF0;
+  z-index: 4;
+}
+
+.mainbox {
+  padding: 15px;
+  width: 90%;
+  height: 70%;
+  width: 75%;
+  margin: 0 auto;
+  background: rgba(255, 255, 255, 0.9);
+  z-index: 2;
+  position: relative;
+  bottom: -100vh;
 }
 
 .intro {
@@ -35,20 +37,35 @@ Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat
   text-align: center;
   line-height: 1.8;
   font-size: 18px;
-  color: #3c3c3c
+  color: #3c3c3c;
+  z-index: 3;
+  padding: 0px;
 
 }
-
 
 
 h1 {
   color: #bf76e0; /* A shade of pink */
   text-align: center;
-  font-size:60px;
+  font-size:75px;
+  position: sticky;
+  top: 15vh;
   font-family: "Georgia", Times, serif;
+  text-shadow: 0 0 38px #E7B9F0, 0 0 15px #F9EDFA, 2px 2px 2px black;
 }
 
 
 body {
-  font-family: "Spinnaker", sans-serif;
-}
+    font-family: "Spinnaker", sans-serif;
+    background-image: url("GT poster.jpg");
+    background-repeat:no-repeat;
+    min-height: 100vh;
+    background-size: cover;
+    background-position: 50% 75%;
+    background-attachment: fixed;
+    z-index: 1;
+    padding: 0px;
+    margin: 0px;
+    alt="Ghosts' Town cover art. Stu Parker,
+  Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake"
+  }
