--- a/style.css
+++ b/style.css
@@ -55,20 +55,26 @@ h1 {
 }
 
 
-body {
+  body {
+    margin: 0;
+    padding: 0;
     font-family: "Spinnaker", sans-serif;
+  }
+
+  .body-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url("GT poster.jpg");
-    background-repeat:no-repeat;
-    min-height: 100vh;
+    background-position: center;
     background-size: cover;
-    background-position: sticky;
-    background-position: 50% 75%;
-    background-attachment: fixed;
-    z-index: 1;
-    padding: 0px;
-    margin: 0px;
+    background-repeat:no-repeat;
+    z-index: -1; /* Make sure the background stays behind other content */
     alt="Ghosts' Town cover art. Stu Parker,
   Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake"
   }
+
 
 
