--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ h1 {
   body {
     margin: 0;
     padding: 0;
+    text-align: center;
     font-family: "Spinnaker", sans-serif;
   }
 
@@ -75,6 +76,7 @@ h1 {
     alt="Ghosts' Town cover art. Stu Parker,
   Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake"
   }
+
 
 
 
