--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1 {
   text-align: center;
   font-size:75px;
   position: sticky;
-  top: 15vh;
+  top: 0;
   font-family: "Georgia", Times, serif;
   text-shadow: 0 0 38px #E7B9F0, 0 0 15px #F9EDFA, 2px 2px 2px black;
 }
@@ -76,6 +76,7 @@ h1 {
     alt="Ghosts' Town cover art. Stu Parker,
   Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake"
   }
+
 
 
 
