--- a/style.css
+++ b/style.css
@@ -44,14 +44,17 @@
 }
 
 
-h1 {
-  color: #bf76e0; /* A shade of pink */
-  text-align: center;
-  font-size:75px;
+sticky-header {
   position: sticky;
   margin-top: 20vh;
   height: auto;
   top: 0;
+}
+
+h1 {
+  color: #bf76e0; /* A shade of pink */
+  text-align: center;
+  font-size: 75px;
   font-family: "Georgia", Times, serif;
   text-shadow: 0 0 38px #E7B9F0, 0 0 15px #F9EDFA, 2px 2px 2px black;
 }
@@ -78,6 +81,7 @@ h1 {
     alt="Ghosts' Town cover art. Stu Parker,
   Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake"
   }
+
 
 
 
