--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h1 {
 }
 
 .blankbox {
-  height: 100vh
+  height: 100vh;
   position: relative;
 }
 
@@ -102,3 +102,4 @@ h1 {
     alt="Ghosts' Town cover art. Stu Parker,
   Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake"
   }
+
