--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   text-align: center;
   width: 75%;
   height: 400px;
+  overflow: auto;
   margin: 0 auto;
   color: #3c3c3c;
   background: #ECCEF0;
@@ -101,6 +102,7 @@ h1 {
     alt="Ghosts' Town cover art. Stu Parker,
   Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake"
   }
+
 
 
 
